After consolidate all data sets

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,13 @@ website:
     left:
     - text: "Proposal"
       href: "Proposal/Proposal.html"
+    
+    
+    - text: "Acutal Work"
+      menu:
+        - text: "DataPrep"
+          href: "Actualwork/Dataprep/Dataprep.html"
+    
 
     
  
