Small fix after consolidate all data sets

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
     
     - text: "Acutal Work"
       menu:
-        - text: "DataPrep"
+        - text: "DataPrepration"
           href: "Actualwork/Dataprep/Dataprep.html"
     
 
